# ucx

./: CLAUDE.md  DMA_BUF_INTEGRATION_SUMMARY.md  GAUDI_AUTO_DETECTION.md  GAUDI_COMMUNICATION_ARCHITECTURE.md  GAUDI_DEVICE_TO_DEVICE_IPC.md  GAUDI_ENHANCEMENTS_IMPLEMENTED.md  GAUDI_FINAL_IMPLEMENTATION_STATUS.md  GAUDI_IMPROVEMENT_SUGGESTIONS.md  GAUDI_IPC_CUSTOM_CHANNELS.md  GAUDI_LATEST_FEATURES.md  GAUDI_MD_TEST_REPORT.md  GAUDI_MODULE_STATUS.md  GAUDI_MODULE_TEST_REPORT.md  GAUDI_PROJECT_SUMMARY.md  GAUDI_TEST_README.md  GAUDI_TEST_RESULTS.md  GAUDI_UCX_INTEGRATION.md  HLTHUNK_API_SUMMARY.md  HLTHUNK_DMA_IMPLEMENTATION.md  Host_Device_Memory_Copy_with_UCX.md  Makefile.am  Makefile.test  NEW_PROVIDER_GUIDE.md  README.gaudi  README.md  build.sh  build_log.txt  check_gaudi  check_gaudi.c  check_gaudi_hardware.sh  check_gaudi_status.sh  configure.ac  configure~  direct_gaudi_test.sh  gaudi_async_test.c  gaudi_direct_test  gaudi_direct_test.c  gaudi_hardware_test.Makefile  gaudi_hardware_test.c  gaudi_md_open_test.c  (+40 more)
config/m4/: gaudi.m4
docs/: GAUDI_UCX_INTEGRATION.md  gaudi_module_usage.md
examples/: Makefile.am  gaudi_memory_example  gaudi_memory_example.c  gaudi_transfer_example  ucp_gaudi_example
hl-thunk/tests/common/: gaudi_memory_copy.c  gaudi_memory_copy.h
install/share/ucx/examples/: gaudi_transfer_example.c  ucp_gaudi_example.c
rdma-gdr/src/: rdma_client.c
src/tools/perf/gaudi/: Makefile.am  configure.m4  gaudi_alloc.c
src/ucm/: configure.m4
src/ucm/gaudi/: Makefile.am  configure.m4  gaudimem.c  gaudimem.h
src/ucm/rocm/: configure.m4
src/ucp/core/: ucp_context.c  ucp_mm.h
src/ucs/memory/: memory_type.c  memory_type.h
src/uct/: Makefile.am  configure.m4
src/uct/gaudi/: Makefile.am  README.md  configure.m4  gaudi_config.c  gaudi_device.c  gaudi_ep.c  gaudi_ep.h  gaudi_iface.c  gaudi_iface.h  gaudi_md.c  gaudi_md.h  ucx-gaudi.pc.in  ucx-rocm.pc.in
src/uct/gaudi/base/: gaudi_base.c  gaudi_base.h  gaudi_iface.c  gaudi_iface.h  gaudi_md.c  gaudi_md.h
src/uct/gaudi/copy/: gaudi_copy_ep.c  gaudi_copy_ep.h  gaudi_copy_iface.c  gaudi_copy_iface.h  gaudi_copy_md.c  gaudi_copy_md.h  gaudi_copy_md_broken.c  gaudi_copy_md_fixed.c  gaudi_md.c
src/uct/gaudi/gaudi_copy/: gaudi_copy_ep.c  gaudi_copy_ep.h  gaudi_copy_iface.c  gaudi_copy_iface.h  gaudi_copy_md.c  gaudi_copy_md.h
src/uct/gaudi/gaudi_dma/: gaudi_dma_iface.c  gaudi_dma_iface.h
src/uct/gaudi/gaudi_ipc/: gaudi_ipc_iface.c  gaudi_ipc_iface.h  gaudi_ipc_md.c  gaudi_ipc_md.h
src/uct/gaudi/ipc/: gaudi_ipc_cache.c  gaudi_ipc_cache.h  gaudi_ipc_ep.c  gaudi_ipc_iface.c  gaudi_ipc_md.c  gaudi_ipc_md.h
src/uct/gaudi/test/: check_gaudi_hardware.sh  gaudi_test_check.c
src/uct/ib/base/: ib_md.c
test/apps/uct_info/: Makefile.in
test/gaudi/: GAUDI_IB_DMABUF_INTEGRATION.md  INTEGRATION_SUCCESS.md  Makefile  README.md  basic_gaudi_test.c  demo.sh  gaudi_dmabuf_test.c  gaudi_ib_integration_test.c  gaudi_memory_type_test.c  gaudi_stress_tests.sh  gaudi_ucm_test.c  gaudi_ucp_dmabuf_example.c  quick_verify.sh  run_all_gaudi_tests.sh  run_core_tests.sh  simple_gaudi_test.c  test_gaudi_copy_post.c  test_gaudi_dma.c  test_gaudi_dmabuf.c  test_gaudi_integration.c  test_gaudi_ipc.c  test_gaudi_memtype.c  test_gaudi_rcache.c  test_gaudi_stats.c  test_memory_types.c  test_memtype_detect.c  test_refined_gaudi_dma.c  test_simple_ucp.c  test_ucp_gaudi_debug.c  test_uct_gaudi_alloc.c  test_uct_gaudi_alloc_fixed.c  ucx_gaudi_info.c
test/gtest/: Makefile.am
test/gtest/ucm/: gaudi_hooks.cc  mock_hlthunk.h  test_gaudi.cc
test/gtest/ucm/gaudi/: test_gaudi.cc
test/gtest/ucp/: test_ucp_gaudi.cc
test/gtest/uct/: test_gaudi.cc
test/gtest/uct/gaudi/: Makefile.am  README.md  gaudi_advanced.conf  gaudi_copy.conf  gaudi_ipc.conf  run_gaudi_tests.sh  run_gaudi_tests_enhanced.sh  test_gaudi_advanced.cc  test_gaudi_common.h  test_gaudi_dma.cc  test_gaudi_dma_comprehensive.cc  test_gaudi_error_handling.cc  test_gaudi_integration.cc  test_gaudi_md.cc  test_gaudi_performance.cc  test_gaudi_stress.cc  test_gaudi_transport.cc  test_summary.sh  test_uct_gaudi.cc
test/mpi/: test_memhooks
test_output/: GAUDI_TEST_SUMMARY.md  direct_gaudi_test.sh  gaudi_direct_test  gaudi_direct_test.c  gaudi_hw_test  gaudi_hw_test.c  gaudi_md_test.c  gaudi_module_check.c  gaudi_module_load  gaudi_module_load.c  gaudi_simplified_test  gaudi_simplified_test.c
testgroup/: CRITICAL_FIX_SUMMARY.md  DMABUF_CONNECTION_EXPLAINED.md  GAUDI_IB_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  UCX_SOURCE_MIGRATION_SUMMARY.md  build.sh  comprehensive_fix_test.c  final_verification_test.c  gaudi_comm_test.c  gaudi_copy_ep.c  gaudi_copy_iface.c  gaudi_copy_md.c  gaudi_dmabuf_mlx_test.c  gaudi_query_md_resources_test.c  gaudi_test_final  gaudi_test_final.Makefile  gaudi_test_final.c  gaudi_uct_direct_test.c  gaudi_uct_simple_test.c  gaudi_ucx_transport_test.c  gaudimem.c  simple_test.c  test_complete_dmabuf_integration.c  test_dmabuf_simple.c  test_fixed_gaudi_dmabuf.c  test_fixed_gaudi_dmabuf_simple.c  test_gaudi_dmabuf.c  test_gaudi_ib_integration.c  test_gaudi_mlx_dmabuf.c  test_gaudi_mlx_dmabuf_simple.c  test_gaudi_simple.c  test_mlx_dmabuf_enhanced.c  test_real_dmabuf_integration.c  test_real_dmabuf_integration_fixed.c  test_real_gaudi_dmabuf_issues.c  test_ucm_gaudi.c  test_ucm_gaudi_hooks.c  test_ucm_gaudi_hooks_clean.c  (+3 more)
testgroup/ucp/: endpoint_test.c  makefile  ucp_gaudi_uct_test.c
testgroup/ucs/: gaudi_ucs_test.c
